argocd/platform/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    istio-injection: enabled
    team: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    team: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    team: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    istio-injection: enabled
    team: platform
